resources/sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  labels:
    app.: sonarqube
spec:
  rules:
    - host: sonarqube.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
